file(GLOB SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/*.c ${CMAKE_CURRENT_SOURCE_DIR}/minizip/*.c)
add_executable(trrntzip ${SOURCES})
target_compile_definitions(trrntzip PRIVATE "TZ_VERSION=\"${PROJECT_VERSION}\"")
target_link_libraries(trrntzip ZLIB::ZLIB)
if (UNIX)
  target_link_libraries(trrntzip m)
endif()
set_property(SOURCE ${CMAKE_CURRENT_SOURCE_DIR}/minizip/unzip.c APPEND PROPERTY COMPILE_DEFINITIONS UNZ_MAXFILENAMEINZIP=1024)
install(TARGETS trrntzip EXPORT ${PROJECT_NAME}-targets DESTINATION bin)
